deployment/apps/shared-default-gateway/base/gateway.yaml
---
# Source: deployment/templates/apps/shared-default-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-default-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: domain-cert-issuer
spec:
  gatewayClassName: istio
  listeners:
    - name: shared-http
      hostname: "*.apps.example.com"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: shared-tcp
      protocol: TCP
      port: 5432
      allowedRoutes:
        namespaces:
          from: All
        kinds:
        - group: gateway.networking.k8s.io
          kind: TCPRoute
    - name: shared-https
      hostname: "*.apps.example.com"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
        - group: ''
          kind: Secret
          name: apps-domain-tls
    - name: shared-tls
      hostname: "*.apps.example.com"
      protocol: TLS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
